Fix grid wrap, add createCard()

--- a/07-Library/style.css
+++ b/07-Library/style.css
@@ -37,15 +37,17 @@ header {
 }
 
 main {
-  display: grid;
-  grid-template-columns: 4fr 1fr;
+  display: flex;
+  /* grid-template-columns: 4fr 1fr; */
+  flex-direction: row-reverse;
   padding: 3rem 2rem 0 2rem;
   /* position: relative; */
+  justify-content: space-between;
 }
 
 aside {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
+  /* grid-column: 2 / 3;
+  grid-row: 1 / 2; */
   position: sticky;
   top: 9rem;
   display: flex;
@@ -54,15 +56,18 @@ aside {
   margin-left: var(--padding);
   height: 70vh;
   padding-bottom: 1rem;
+  flex-basis: 20%;
 }
 
 section {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+  /* grid-column: 1 / 2;
+  grid-row: 1 / 2; */
   display: grid;
   grid-template-columns: repeat(auto-fit, 14.5rem);
+  grid-auto-rows: max-content;
   gap: var(--padding);
   justify-content: center;
+  flex-basis: 90%;
   /* grid-template-rows: repeat(auto-fit, 17rem); */
   /* grid-template-rows: repeat(auto-fit, minmax(17rem, auto)); */
 }
@@ -127,6 +132,7 @@ hr {
   align-self: center;
   cursor: pointer;
   margin-bottom: 1rem;
+  filter: drop-shadow(0 0 0.3rem var(--emphasis));
 }
 
 .add-book:hover {
@@ -148,7 +154,7 @@ hr {
   align-items: center;
   line-height: 0.9;
   font-size: 0.9rem;
-  justify-content: stretch;
+  justify-content: space-between;
 }
 
 .book-label {
@@ -166,16 +172,17 @@ hr {
 .book-title,
 .book-author,
 .book-page {
-  padding: 0.3rem 0.2rem;
+  padding: 0.5rem 0.2rem;
   width: 100%;
   text-align: center;
-  /* height: 2.2rem; */
-  /* word-wrap: break-word; */
+  height: 2.2rem;
+  word-wrap: break-word;
 }
 
 .book-read {
   background: #ccd5ae;
   margin: 1rem;
+  margin-top: 2rem;
   padding: 0 1rem;
   height: 1.4rem;
   display: flex;
